--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.6.4",
     "@nestjs/swagger": "^4.7.8",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
