--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.6.4",
     "@nestjs/swagger": "^4.7.8",
+    "@nestjs/typeorm": "^7.1.5",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
