--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -57,6 +57,12 @@ jobs:
       - name: Install dependecies
         run: yarn install
 
+      - name: Build
+        run: yarn build
+
+      - name: Generate keys
+        run: yarn generateToken
+
       - name: Run tests
         run: yarn test
 
