--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "generateToken": "node dist/generateJWEToken.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
@@ -29,6 +30,7 @@
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/typeorm": "^7.1.5",
     "@types/passport-http-bearer": "^1.0.36",
+    "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "jose": "^3.5.0",
@@ -82,7 +84,10 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^jose/(.*)$": "<rootDir>/../node_modules/jose/dist/node/cjs/$1"
+    }
   },
   "engines": {
     "node": ">=14"
