--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "generateToken": "node dist/generateJWEToken.js"
+    "generateToken": "node dist/generateJWEToken.js",
+    "heroku-postbuild": "yarn generateToken"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
