--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "postbuild": "yarn generateToken",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -19,8 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "generateToken": "node dist/generateJWEToken.js",
-    "heroku-postbuild": "yarn generateToken"
+    "generateToken": "node dist/generateJWEToken.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
