--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/platform-express": "^7.6.4",
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/node-fetch": "^2.5.7",
     "@types/passport-http-bearer": "^1.0.36",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "jose": "^3.5.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
