--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -73,6 +73,9 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Run migrations
+        run: node ./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:run
+
       - name: Run tests
         run: yarn test
 
