--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.4",
+    "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/cron": "^1.7.2",
     "@types/node-fetch": "^2.5.7",
     "@types/passport-http-bearer": "^1.0.36",
     "bcrypt": "^5.0.0",
