--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
@@ -29,10 +30,12 @@
     "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/bull": "^3.14.4",
     "@types/cron": "^1.7.2",
     "@types/node-fetch": "^2.5.7",
     "@types/passport-http-bearer": "^1.0.36",
     "bcrypt": "^5.0.0",
+    "bull": "^3.20.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "jose": "^3.5.0",
