--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/bull": "^3.14.4",
     "@types/cron": "^1.7.2",
     "@types/node-fetch": "^2.5.7",
+    "@types/passport-google-oauth20": "^2.0.5",
     "@types/passport-http-bearer": "^1.0.36",
     "bcrypt": "^5.0.0",
     "bull": "^3.20.0",
@@ -41,6 +42,7 @@
     "jose": "^3.5.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
