--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/bcrypt": "^3.0.0",
     "@types/bull": "^3.14.4",
     "@types/cron": "^1.7.2",
     "@types/node-fetch": "^2.5.7",
     "@types/passport-google-oauth20": "^2.0.5",
     "@types/passport-http-bearer": "^1.0.36",
+    "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.0",
     "bull": "^3.20.0",
     "class-transformer": "^0.3.1",
