--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "runMigrations": "node ./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:run"
+    "runMigrations": "node ./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:run",
+    "heroku-postbuild": "yarn runMigrations"
   },
   "dependencies": {
     "@nestjs/bull": "^0.3.1",
