--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,7 +27,7 @@ jobs:
           - 6379:6379
 
       postgres:
-        image: postgres
+        image: postgres:latest
         env:
           POSTGRES_USER: db_username
           POSTGRES_PASSWORD: db_password
