--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -77,7 +77,7 @@ jobs:
         run: yarn build
 
       - name: Run migrations
-        run: yarn runMigrations
+        run: typeorm migration:run
 
       - name: Run tests
         run: yarn test
