--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "runMigrations": "node ./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:run",
-    "heroku-postbuild": "yarn runMigrations"
+    "heroku-postbuild": "yarn build && yarn runMigrations"
   },
   "dependencies": {
     "@nestjs/bull": "^0.3.1",
