--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:heroku": "yarn runMigrations && yarn start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "runMigrations": "node ./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:run",
-    "heroku-postbuild": "yarn build && yarn runMigrations"
+    "runMigrations": "node ./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:run"
   },
   "dependencies": {
     "@nestjs/bull": "^0.3.1",
