--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "bcrypt": "^5.0.0",
     "bull": "^3.20.0",
     "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
+    "class-validator": "^0.13.1",
     "jose": "^3.5.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
@@ -69,9 +69,9 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.0.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.6",
+    "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "prettier": "^2.1.2",
