--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.13.1",
     "jose": "^3.5.0",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
